--- a/pages/pk/findSomeOne/findSomeOne.wxml
+++ b/pages/pk/findSomeOne/findSomeOne.wxml
@@ -1,9 +1,9 @@
-<view class="css {{findUsers.length>0?'b-49':'b-white'}}" style="min-height:100vh;background-position: center;background-image: url({{backUrl1}});background-repeat: no-repeat;background-size: 100% 100%;">
-    <view style="height:{{top+42}}px"></view>
+<view class="css {{findUsers.length>0?'b-48':'b-white'}}" style="min-height:100vh">
+
 
 
     <view class="css">
-        
+            
             <!-- <swiper wx:if="{{findUsers.length > 0}}" style="height:80vh" indicator-dots="true" autoplay="true" circular="true" >
                 <block wx:for="{{findUsers}}" wx:for-index="bindex" wx:for-item="findUser" wx:key="findKey">
                     <swiper-item  >
@@ -128,6 +128,7 @@
                 </block>
             </swiper>  -->
             <view wx:if="{{findUsers.length > 0}}" class="css">
+                <view style="height:{{top+42}}px"></view>
                 <block wx:for="{{findUsers}}" wx:for-index="bindex" wx:for-item="findUser" wx:key="findKey">
                     <view class="h-50"></view>
                     <view class="css pl-5vw pr-5vw ">
@@ -151,16 +152,27 @@
                                                         <view class="rus line-1-start fs-30 fw-700" >{{findUser.user.userName}}</view>
                                                     </view>
                                                 </view>
-                                            
+                                                <view  class="rcc " >
+                                                    <view class="rcc">
+                                                        <view class="rcc">
+                                                            <image class="w-40 h-40" mode="aspectFit" src="/images/comment.png"></image>
+                                                        </view>
+                                                    </view>
+                                                </view>              
+                                                <view class="w-70"></view>      
+                                                <button open-type="share" class="rcc b-white message" style="width:50rpx;height:50rpx" data-findid="{{findUser.findId}}" data-pkname="{{findUser.pkName}}" data-url="{{findUser.img1?findUser.img1:findUser.user.imgUrl}}">
+                                                    <view class="rcc ">
+                                                        <image class="rcc w-40 h-40 " mode="aspectFit" src="/images/share1.png"></image>
+                                                    </view>
+                                                </button>
+                                                    
+                                                <view class="w-70"></view>         
                                                 <navigator  class="rcc " hover-class="none" url="/pages/pk/userCard/userCard?userId={{findUser.user.userId}}">
                                                     <view class="rcc">
                                                         <view class="rcc">
                                                             <image class="w-40 h-40" mode="aspectFit" src="/images/hiscard.png"></image>
                                                         </view>
-                                                        <!-- <view class="w-10"></view> -->
-                                                        <!-- <view class="fs-25 fw-700 c-4">2.4k</view> -->
                                                     </view>
-                                                
                                                 </navigator>    
 
                                         </view>
@@ -168,21 +180,21 @@
 
                                         <view class="css pl-3vw pr-3vw" >
                                             <view class="css pt-30 pb-30">
-                                                <!-- <view class="rus"> -->
+                                             
                                                     <view class="rus fs-30 fw-400 line-5-start">{{findUser.text}}</view>
-                                                <!-- </view> -->
+                                        
 
                                             </view>
                                             <view class="css">
                                                 <view class="rbc">
-                                                    <view class="rcc b-48 br-10" style="width:27.5vw;height:23vw">
+                                                    <view class="rcc br-10" style="width:27.5vw;height:23vw">
                                                         <image wx:if="{{findUser.img1}}" class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img1}}"></image>
                                                         <image wx:else style="width:23vw;height:23vw" mode="aspectFit" src="{{emptyImage}}"></image>
                                                     </view>
-                                                    <view class="rcc b-48 br-10" style="width:27.5vw;height:23vw">
+                                                    <view class="rcc br-10" style="width:27.5vw;height:23vw">
                                                         <image wx:if="{{findUser.img2}}" class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img2}}"></image>
                                                         <image wx:else style="width:23vw;height:23vw" mode="aspectFit" src="{{emptyImage}}"></image>                                                </view>
-                                                    <view class="rcc b-48 br-10" style="width:27.5vw;height:23vw">
+                                                    <view class="rcc br-10" style="width:27.5vw;height:23vw">
                                                         <image wx:if="{{findUser.img3}}" class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img3}}"></image>
                                                         <image wx:else style="width:23vw;height:23vw" mode="aspectFit" src="{{emptyImage}}"></image>                                                </view>
                                                 </view>
@@ -257,7 +269,7 @@
 
 </view>
 <!-- //头部 -->
-<view class="css b-line customCenterBar z3 {{findUsers.length>0?'b-49':'b-white'}}" >
+<view class="css b-line customCenterBar z3 {{findUsers.length>0?'b-48':'b-white'}}" >
         <view class="rcs " style="height:{{top}}px"></view>
         <view class="rbc" style="height:32px">
             <view class="rcs" style="flex:1">
@@ -268,8 +280,12 @@
                 </view>
 
             </view>
-
-            <view class="rcc fs-35 fw-700">捞人</view>
+            <view class="rcc">
+                <image class="rcc w-40 h-40" src="/images/find.png" mode="aspectFit"></image>
+                <view class="w-10"></view>
+                <view class="rcc fs-35 fw-700 c-4-1">捞人</view>
+            </view>
+            
             <view class="rcc" style="flex:1">
             </view>
         
@@ -287,7 +303,7 @@
         
         </view>
         <view class="rcc">
-            <navigator class=" rcc" hover-class="none" url="/pages/manage/approveFind/approveFind">
+            <!-- <navigator class=" rcc" hover-class="none" url="/pages/manage/approveFind/approveFind">
                                     <view  class=" w-100 h-100 br-100 rcc box100 b-white" >
                                         <view class="rcc ">
                                             <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/collect.png"></image>
@@ -295,12 +311,12 @@
 
                                     </view>
             </navigator>
-            <view class="w-70"></view>
+            <view class="w-70"></view> -->
 
             <navigator class=" rcc" hover-class="none" url="/pages/pk/userFind/userFind?pkId={{pkId}}">
-                                    <view  class=" w-100 h-100 br-100 rcc box100 b-share" >
+                                    <view  class=" w-100 h-100 br-100 rcc box100 b-white" >
                                         <view class="rcc ">
-                                            <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/invite.png"></image>
+                                            <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/find2.png"></image>
                                         </view>
 
                                     </view>
