--- a/pages/pk/findCard/findCard.wxml
+++ b/pages/pk/findCard/findCard.wxml
@@ -1,8 +1,8 @@
 <!--pages/pk/findCard/findCard.wxml-->
-<view class="css b-48" style="min-height:100vh">
+<view class="csc {{findUser?'b-48':'b-white'}}" style="min-height:100vh">
 
-    <view class="css">
-      <view style="height:{{top+102}}px"></view>
+    <view wx:if="{{findUser}}" class="css">
+
       <view class="css pl-5vw pr-5vw ">
         <view class="css b-white br-20 ">
 
@@ -20,7 +20,7 @@
                     
                     <view class="cas" style="flex:1">
                         <view class="css"> 
-                            <view class="rus line-1-start fs-30 fw-700" >{{findUser.user.userName}}</view>
+                            <view class="rus line-1-start fs-30 fw-650" >{{findUser.user.userName}}</view>
                         </view>
                     </view>
                     <view  class="rcc " >
@@ -31,7 +31,7 @@
                         </view>
                     </view>              
                     <view class="w-70"></view>      
-                    <button open-type="share" class="rcc b-white message" style="width:50rpx;height:50rpx" data-findid="{{findUser.findId}}" data-url="{{findUser.img1?findUser.img1:findUser.user.imgUrl}}">
+                    <button open-type="share" class="rcc b-white message" style="width:50rpx;height:50rpx" data-findid="{{findUser.findId}}" data-pkname="{{findUser.pkName}}" data-url="{{findUser.img1?findUser.img1:findUser.user.imgUrl}}">
                                                     <view class="rcc ">
                                                         <image class="rcc w-40 h-40 " mode="aspectFit" src="/images/share1.png"></image>
                                                     </view>
@@ -51,20 +51,67 @@
             <view class="css pl-3vw pr-3vw" >
                 <view class="css pt-30 pb-30">
                     <!-- <view class="rus"> -->
-                        <view class="rus fs-30">{{findUser.text}}</view>
+                        <view class="rus fs-30 ">{{findUser.text}}</view>
                     <!-- </view> -->
 
                 </view>
-                <view class="css">
-                    <image hidden="{{!findUser.img1}}" class="br-10" style="width:84vw;height:50vw" mode="aspectFill" src="{{findUser.img1}}"></image>
-                    <view class="h-2vw"></view>
-                    <image hidden="{{!findUser.img2}}" class="br-10" style="width:84vw;height:50vw" mode="aspectFill" src="{{findUser.img2}}"></image>
-                    <view class="h-2vw"></view>
-                    <image hidden="{{!findUser.img3}}" class="br-10" style="width:84vw;height:50vw" mode="aspectFill" src="{{findUser.img3}}"></image>
-              
+                <view wx:if="{{findUser.findUser.img2&&findUser.img3}}" class="css">
+                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                       
+                          <swiper-item >
+                                <view class="rcc" style="height:60vw;width:84vw" >
+                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                </view>
+                          </swiper-item>
+                          <swiper-item >
+                                <view class="rcc" style="height:60vw;width:84vw" >
+                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
+                                </view>
+                          </swiper-item>
+                          <swiper-item >
+                                <view class="rcc" style="height:60vw;width:84vw" >
+                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img3}}"></image>
+                                </view>
+                          </swiper-item>
+                    </swiper>
                 </view>
-
-
+                <view wx:elif="{{findUser.img1&&findUser.img2&&!findUser.img3}}" class="css">
+                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                       
+                          <swiper-item >
+                                <view class="rcc" style="height:60vw;width:84vw" >
+                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                </view>
+                          </swiper-item>
+                          <swiper-item >
+                                <view class="rcc" style="height:60vw;width:84vw" >
+                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
+                                </view>
+                          </swiper-item>
+                    </swiper>
+                </view>
+                <view wx:elif="{{findUser.img1&&!findUser.img2&&!findUser.img3}}" class="css">
+                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                       
+                          <swiper-item >
+                                <view class="rcc" style="height:60vw;width:84vw" >
+                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                </view>
+                          </swiper-item>
+                    
+                    </swiper>
+                </view>
+                <view wx:else class="css">
+                    <swiper style="height:60vw;width:84vw" indicator-dots="true" autoplay="true" circular="true" >
+                       
+                          <swiper-item >
+                                <view class="rcc" style="height:60vw;width:84vw" >
+                                   <image class="br-10" style="height:60vw;width:84vw"  mode="aspectFill" src="{{emptyImage}}"></image>
+                                </view>
+                          </swiper-item>
+                  
+                    </swiper>
+                </view>
             </view>
             
 
@@ -113,9 +160,12 @@
 
         </view>
       </view>
-      <view class="h-300"></view>
-    </view>
 
+    </view>
+    <view wx:else class="ccc" style="height:100vh">
+                <image class="rcc w-400 h-400" src="{{userFindImage}}" mode="aspectFit"></image>
+                <view class="rcc fs-30 fw-300 c-3">捞人卡已失效</view>
+    </view>
 
 
 
@@ -125,7 +175,7 @@
 
 </view>
 
-<view class="css customCenterBar z3 b-48" >
+<view class="css customCenterBar z3  {{findUser?'b-48':'b-white'}}" >
         <view class="rcs " style="height:{{top}}px"></view>
         <view class="rbc" style="height:32px">
             <view class="rcs" style="flex:1">
