--- a/pages/pk/findSomeOne/findSomeOne.wxml
+++ b/pages/pk/findSomeOne/findSomeOne.wxml
@@ -7,9 +7,9 @@
             <!-- <swiper wx:if="{{findUsers.length > 0}}" style="height:80vh" indicator-dots="true" autoplay="true" circular="true" >
                 <block wx:for="{{findUsers}}" wx:for-index="bindex" wx:for-item="findUser" wx:key="findKey">
                     <swiper-item  >
- 
+
                         <view class="csc" style="height:80vh">
-          
+        
                             <view class="css">
                                 <view class="css pl-5vw pr-5vw ">
 
@@ -116,10 +116,10 @@
                                     </view>
 
                                 </view>
-    
+
                     
                             </view> 
-                  
+                
                         </view>
 
 
@@ -130,7 +130,7 @@
             <view wx:if="{{findUsers.length > 0}}" class="css">
                 <view style="height:{{top+42}}px"></view>
                 <block wx:for="{{findUsers}}" wx:for-index="bindex" wx:for-item="findUser" wx:key="findKey">
-                    <view class="h-50"></view>
+                    <view class="h-30"></view>
                     <view class="css pl-5vw pr-5vw ">
 
                                     <view class="css b-white br-20 ">
@@ -152,17 +152,17 @@
                                                         <view class="rus line-1-start fs-30 fw-650" >{{findUser.user.userName}}</view>
                                                     </view>
                                                 </view>
-                                                <view  class="rcc " >
+                                                <!-- <view  class="rcc " >
                                                     <view class="rcc">
                                                         <view class="rcc">
                                                             <image class="w-40 h-40" mode="aspectFit" src="/images/comment.png"></image>
                                                         </view>
                                                     </view>
                                                 </view>              
-                                                <view class="w-70"></view>      
+                                                <view class="w-70"></view>       -->
                                                 <button open-type="share" class="rcc b-white message" style="width:50rpx;height:50rpx" data-findid="{{findUser.findId}}" data-pkname="{{findUser.pkName}}" data-url="{{findUser.img1?findUser.img1:findUser.user.imgUrl}}">
                                                     <view class="rcc ">
-                                                        <image class="rcc w-40 h-40 " mode="aspectFit" src="/images/share1.png"></image>
+                                                        <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/share1.png"></image>
                                                     </view>
                                                 </button>
                                                     
@@ -170,7 +170,7 @@
                                                 <navigator  class="rcc " hover-class="none" url="/pages/pk/userCard/userCard?userId={{findUser.user.userId}}">
                                                     <view class="rcc">
                                                         <view class="rcc">
-                                                            <image class="w-40 h-40" mode="aspectFit" src="/images/hiscard.png"></image>
+                                                            <image class="w-50 h-50" mode="aspectFit" src="/images/card.png"></image>
                                                         </view>
                                                     </view>
                                                 </navigator>    
@@ -180,8 +180,8 @@
 
                                         <view class="css pl-3vw pr-3vw" >
                                             <view class="css pt-30 pb-30">
-                                             
-                                                    <view class="rus fs-30 fw-400 line-5-start">{{findUser.text}}</view>
+                                            
+                                                    <view class="rus fs-30 line-3-start">{{findUser.text}}</view>
                                         
 
                                             </view>
@@ -211,39 +211,17 @@
                                                 
                                                 <view class="ccc p-10 fs-28 fw-300 c-4" style="flex:1">
                                                     <view class="fs-23 fw-300 c-4">已打捞</view>
-                                                    <view class="fs-25 fw-700 c-4">{{findUser.timeExpire}}</view>
+                                                    <view class="fs-25 fw-700">{{findUser.timeExpire}}</view>
                                                 </view>
                                                 <view class="w-5 l-line" style="height:3vw"></view>    
                                                 <view class="ccc p-10 fs-28 fw-300 c-4" style="flex:1">
                                                     <view class="fs-23 fw-300 c-4">总打捞时间</view>
-                                                    <view class="fs-25 fw-700 c-4">{{findUser.findLength}}天</view>
+                                                    <view class="fs-25 fw-700">{{findUser.findLength}}天</view>
                                                 </view>
                                             </view>
                                 
 
                                         </view>
-
-                                        <view class="css pl-3vw pr-3vw ">
-                                        <view class="rss">
-                                                <view class="rcc">
-                                                    <image class="rcc w-40 h-40 br-40" mode="aspectFit" src="/images/locate.png" ></image>
-                                                </view>
-                                                <view class="w-10"></view>
-                                                
-                                                <view class="cas " style="flex:1">
-                                                    <view class="rus line-1-start fs-25 fw-400 c-4">{{findUser.pkName}}</view>
-                                                </view>
-                                        </view>
-                                        <view class="h-3vw"></view>
-                                        </view>
-
-
-
-
-
-
-
-
                                     </view>
 
                     </view>
@@ -255,7 +233,7 @@
                 <image class="rcc w-400 h-400" src="{{emptyUrl}}" mode="aspectFit"></image>
                 <view class="rcc fs-30 fw-300 c-3">此处暂无打捞信息</view>
             </view>
-   
+
 
 
     </view>
@@ -269,71 +247,71 @@
 
 </view>
 <!-- //头部 -->
-<view class="css b-line customCenterBar z3 {{findUsers.length>0?'b-48':'b-white'}}" >
-        <view class="rcs " style="height:{{top}}px"></view>
-        <view class="rbc" style="height:32px">
-            <view class="rcs" style="flex:1">
-                <view class="rcc h-32px" bindtap="back">
-                    <view class="w-4vw"></view>
-                    <image class="h-30 w-30" mode="aspectFit" src="/images/back.png"></image>
-                    <view class="w-4vw"></view>
-                </view>
-
+<view class="css customCenterBar z3 {{findUsers.length>0?'b-48':'b-white'}}" >
+    <view class="rcs " style="height:{{top}}px"></view>
+    <view class="rbc" style="height:32px">
+        <view class="rcs" style="flex:1">
+            <view class="rcc h-32px" bindtap="back">
+                <view class="w-4vw"></view>
+                <image class="h-30 w-30" mode="aspectFit" src="/images/back.png"></image>
+                <view class="w-4vw"></view>
             </view>
-            <view class="rcc">
-                <image class="rcc w-40 h-40" src="/images/find.png" mode="aspectFit"></image>
-                <view class="w-10"></view>
-                <view class="rcc fs-35 fw-700 c-4-1">捞人</view>
-            </view>
-            
-            <view class="rcc" style="flex:1">
-            </view>
-        
-        </view>
-        <view class="rcs " style="height:10px"></view>
-</view>
 
-
-
-<view class="rbc bottomBar1 z4">
-        <view class="rss ">
-
-        
-        
-        
         </view>
         <view class="rcc">
-            <navigator class=" rcc" hover-class="none" url="/pages/manage/approveFind/approveFind">
-                                    <view  class=" w-100 h-100 br-100 rcc box100 b-white" >
-                                        <view class="rcc ">
-                                            <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/collect.png"></image>
-                                        </view>
-
-                                    </view>
-            </navigator>
-            <view class="w-70"></view>
-
-            <navigator class=" rcc" hover-class="none" url="/pages/pk/userFind/userFind?pkId={{pkId}}">
-                                    <view  class=" w-100 h-100 br-100 rcc box100 b-white" >
-                                        <view class="rcc ">
-                                            <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/find2.png"></image>
-                                        </view>
-
-                                    </view>
-            </navigator>
+            <image class="rcc w-40 h-40" src="/images/find.png" mode="aspectFit"></image>
+            <view class="w-10"></view>
+            <view class="rcc fs-35 fw-700 c-4-1">捞人</view>
         </view>
+        
+        <view class="rcc" style="flex:1">
+        </view>
+    
+    </view>
+    <view class="rcs " style="height:10px"></view>
+</view>
+
+
+
+<view class="rbc bottomBar1 z4 ">
+    <view class="rss ">
+
+    
+    
+    
+    </view>
+    <view class="rcc">
+        <navigator class=" rcc" hover-class="none" url="/pages/manage/approveFind/approveFind">
+                                <view  class=" w-100 h-100 br-100 rcc box100 b-white" >
+                                    <view class="rcc ">
+                                        <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/collect.png"></image>
+                                    </view>
+
+                                </view>
+        </navigator>
+        <view class="w-70"></view>
+
+        <navigator class=" rcc" hover-class="none" url="/pages/pk/userFind/userFind?pkId={{pkId}}">
+                                <view  class=" w-100 h-100 br-100 rcc box100 b-white" >
+                                    <view class="rcc ">
+                                        <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/find2.png"></image>
+                                    </view>
+
+                                </view>
+        </navigator>
+    </view>
 
 
 
 
 </view>
-<view class="ccc uploadButton">
-  <view class="rcc  p-20">
-    <view class="rcc fs-25 fw-300">遇见不撩</view>
-    <image class="w-35 h-35 pl-10 pr-10" mode="aspectFit" src="/images/shank.png"></image>
-    <view class="rcc fs-25 fw-300">卡点互捞</view>
-  </view>
-  
+<view class="ccc uploadButton b-48">
+    <view class="rcc  p-10">
+        <view class="rcc fs-25 fw-300">遇见不撩</view>
+        <image class="w-35 h-35 pl-10 pr-10" mode="aspectFit" src="/images/shank.png"></image>
+        <view class="rcc fs-25 fw-300">卡点互捞</view>
+    </view>
+
 
 
 </view>
@@ -346,115 +324,115 @@
 <view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
 <view class="css dialogTip" hidden="{{dialog.visible!=true}}">
 <view class="css b-white br-20"   >
-    <view class="cbs" style="flex:1">
-        <view class="rcc">
-             <image class="w-300 h-300" mode="aspectFit" src="{{dialog.tipImg}}"></image>
-        </view>
-        
-        <view class="css">
-            <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{dialog.title}}</view>
-            <view class="h-20"></view>
-            <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{dialog.text}}</view> <view class="h-40"></view>
-        </view>
-        <view></view>
-        <view></view>
-        <view class="rcc pt-50 pb-50">
-            <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="dialog_confirm" >知道了</view>
-        </view>
-
+<view class="cbs" style="flex:1">
+    <view class="rcc">
+         <image class="w-300 h-300" mode="aspectFit" src="{{dialog.tipImg}}"></image>
     </view>
+    
+    <view class="css">
+        <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{dialog.title}}</view>
+        <view class="h-20"></view>
+        <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{dialog.text}}</view> <view class="h-40"></view>
+    </view>
+    <view></view>
+    <view></view>
+    <view class="rcc pt-50 pb-50">
+        <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="dialog_confirm" >知道了</view>
+    </view>
+
+</view>
 
 
 </view>
 <!-- <view class="rcc p-100">
-    <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+<image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
 </view> -->
 </view>
 <view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
 <view class="ccc levelDialog_view">
-    <view class="rcc">
-        <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
-        <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
-        <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
-    </view>
-    <view style="height:30rpx"></view>
-    <view class="rcc levelDialog_text">{{tipDialog.message}}</view>
+<view class="rcc">
+    <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
+    <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
+    <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
+</view>
+<view style="height:30rpx"></view>
+<view class="rcc levelDialog_text">{{tipDialog.message}}</view>
 </view>
 </view>
 <view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
 <view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
 <view class="css b-white br-20"   >
-    <!-- <view class="rcc">
-        <view class="rcc absolute ">
-            <image class="w-600 h-400" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
-        </view>
-    </view> -->
-    <view class="cbs" style="flex:1">
-        <view class="rcc">
-            <image class="w-300 h-300" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
-        </view>
-        <view class="css">
-            <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{operateDialog.title}}</view>
-            <view class="h-20"></view>
-            <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view> <view class="h-40"></view>
-        </view>
-
-        <view></view>
-        <view></view>
-
-        <view class="rcc ">
-            <view class="rcc w-250 h-70 br-20 bTipColor fs-25 fw-400 c-white"  bindtap="operateDialog_confirm" >确定</view>
-        </view>
-        <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view>
-
+<!-- <view class="rcc">
+    <view class="rcc absolute ">
+        <image class="w-600 h-400" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
     </view>
+</view> -->
+<view class="cbs" style="flex:1">
+    <view class="rcc">
+        <image class="w-300 h-300" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
+    </view>
+    <view class="css">
+        <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{operateDialog.title}}</view>
+        <view class="h-20"></view>
+        <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view> <view class="h-40"></view>
+    </view>
+
+    <view></view>
+    <view></view>
+
+    <view class="rcc ">
+        <view class="rcc w-250 h-70 br-20 bTipColor fs-25 fw-400 c-white"  bindtap="operateDialog_confirm" >确定</view>
+    </view>
+    <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view>
+
+</view>
 
 
 </view>
 <view class="rcc p-100">
-    <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+<image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
 </view>
 </view>
 
 <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
 <view class="ccc ">
-    <view class="rcc">
-        <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/load.gif"></image>
-    </view>
-    <view class="rcc"></view>
+<view class="rcc">
+    <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/load.gif"></image>
+</view>
+<view class="rcc"></view>
 </view>
 <view></view>
 </view>
 <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialogError.visible!=true}}">
 <view></view>
 <view class="ccc ">
-    <view class="rcc">
-        <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/errorpage.png"></image>
-    </view>
-    <view class="rcc"></view>
+<view class="rcc">
+    <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/errorpage.png"></image>
+</view>
+<view class="rcc"></view>
 </view>
 </view>
 <view catchtouchmove="return" class="coverAll99" hidden="{{labelLoadingDialog.visible!=true}}"></view>
 <view catchtouchmove="return" class="rcc labelLoadingDialog " hidden="{{labelLoadingDialog.visible!=true}}">
 <view class="rcc labelLoadingDialog_view">
-    <image class="labelLoadingDialog_image" mode="aspectFill" src="/images/loading.gif"></image>
-    <view class="labelLoadingDialog_text">加载中</view>
+<image class="labelLoadingDialog_image" mode="aspectFill" src="/images/loading.gif"></image>
+<view class="labelLoadingDialog_text">加载中</view>
 </view>
 </view>
 <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogSuccess.visible!=true}}">
 <view class="rcc labelLoadingDialog_view">
-    <view class="rcc">
-        <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
-    </view>
-    <view class="labelLoadingDialog_text">加载成功</view>
+<view class="rcc">
+    <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
+</view>
+<view class="labelLoadingDialog_text">加载成功</view>
 </view>
 </view>
 <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogError.visible!=true}}">
 <view class="rcc labelLoadingDialog_view">
-    <view class="rcc">
-        <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
-    </view>
-    <view class="labelLoadingDialog_text">加载失败</view>
+<view class="rcc">
+    <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
+</view>
+<view class="labelLoadingDialog_text">加载失败</view>
 </view>
 </view>
 
