--- a/pages/pk/timepage/timepage.wxml
+++ b/pages/pk/timepage/timepage.wxml
@@ -81,7 +81,7 @@
                                                     <image class="w-30 h-30" mode="aspectFit" src="/images/daka1.png"></image>
                                                     <view class="w-10"></view>
                                                     <view class="rcc fs-30 c-4">{{pk.approved}}</view>
-                                                    <view class="rcc fs-23 c-4">次到此打卡</view>
+                                                    <view class="rcc fs-23 c-4">人到此打卡</view>
                                                 </view>
                                         
                                         </view>
@@ -107,7 +107,7 @@
                                                                     </view>
                                                                 </view>
                                                                 <view class="w-20"></view>
-                                                                <view class="rcc pl-20 pr-20 br-10 b-48">
+                                                                <view class="rcc pl-20 pr-20 br-10 b-48" bindtap="userSort" data-pkid="{{pk.pkId}}">
                                                                     <view class="csc">
                                                                         <view class="rus">
                                                                             <view class="rcc fs-30 h-50 fw-610 c-4">{{postTimes}}</view>
